--- a/src/main/resources/templates/solution/index.html
+++ b/src/main/resources/templates/solution/index.html
@@ -1,84 +1,10 @@
 <!doctype html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-   <head>
-      <meta charset="utf-8">
-      <title>DGIST - 문제은행</title>
-      <meta name="keywords" content="HTML5 Template">
-      <meta name="description" content="Forum - Responsive HTML5 Template">
-      <meta name="author" content="Forum">
-      <meta name="format-detection" content="telephone=no">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <link rel="shortcut icon" th:href="@{/favicon/favicon.ico}" href="/favicon/favicon.ico">
-      <link rel="stylesheet" th:href="@{/css/style.css}" href="/css/style.css">
-   </head>
+   <head th:replace="solution/widget/head :: head"></head>
    <body>
       <!-- tt-mobile menu -->
-      <nav class="panel-menu" id="mobile-menu">
-         <ul>
-         </ul>
-         <div class="mm-navbtn-names">
-            <div class="mm-closebtn">
-               Close
-               <div class="tt-icon">
-                  <svg>
-                     <use xlink:href="#icon-cancel"></use>
-                  </svg>
-               </div>
-            </div>
-            <div class="mm-backbtn">Back</div>
-         </div>
-      </nav>
-      <header id="tt-header">
-         <div class="container">
-            <div class="row tt-row no-gutters">
-               <div class="col-auto">
-                  <!-- toggle mobile menu -->
-                  <a class="toggle-mobile-menu" >
-                     <svg class="tt-icon">
-                        <use xlink:href="#icon-menu_icon"></use>
-                     </svg>
-                  </a>
-                  <!-- /toggle mobile menu -->
-                  <!-- logo -->
-                  <div class="tt-logo">
-                     <a href="index.html">
-                       <img th:src="@{/images/logo.png}" src="/images/logo.png" alt="">
-                     </a>
-                  </div>
-                  <!-- /logo -->
-                  <!-- desctop menu -->
-                  <div class="tt-desktop-menu">
-                     <nav>
-                        <ul>
-                           <li><a href="/solution/apply"><span>등록</span></a></li>
-                           <li><a href="/solution/list?min=1&max=10&state=0" ><span>목록</span></a></li>
-                           <li><a href="/pg/myAnswer"><span>내 답변</span></a></li>
-                           <li><a href="/pg/help"><span>이용방법</span></a></li>
-                        </ul>
-                     </nav>
-                  </div>
-               </div>
-               <div class="col-auto ml-auto">
-                  <div class="tt-user-info d-flex justify-content-center">
-                     <a  class="tt-btn-icon">
-                        <i class="tt-icon">
-                           <svg>
-                              <use xlink:href="#icon-notification"></use>
-                           </svg>
-                        </i>
-                     </a>
-                     <div class="tt-avatar-icon tt-size-md">
-                        <i class="tt-icon">
-                           <svg>
-                              <use xlink:href="#icon-ava-a"></use>
-                           </svg>
-                        </i>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </header>
+      <nav th:replace="solution/widget/mobile-menu :: m-menu"></nav>
+      <header th:replace="solution/widget/pc-menu :: p-menu"></header>
       <main style="margin-bottom:50px;">
          <div class="container">
             <div class="tt-layout-404">
@@ -134,5 +60,6 @@
          </div>
       </main>
       <script src="js/bundle.js"></script>
+      <svg th:replace="solution/svg/svg :: svg"></svg>
    </body>
 </html>
