헤더, 메뉴, svg 파일단위로 수정 2

--- a/src/main/resources/templates/solution/index.html
+++ b/src/main/resources/templates/solution/index.html
@@ -13,7 +13,7 @@
                </span>
                <h6 class="tt-title">방문을 환영합니다.</h6>
                <p>어렵고 힘든 문제가 있으신가요?<br>
-                  <a href="index.html" class="tt-color-dark tt-underline-02">문제등록</a>을 통해 고수님들의 도움을 받아보세요.
+                  <a href="/solution/apply" class="tt-color-dark tt-underline-02">문제등록</a>을 통해 고수님들의 도움을 받아보세요.
                </p>
             </div>
             <div class="tt-topic-list tt-offset-top-55" >
