--- a/src/main/resources/templates/solution/widget/pc-menu.html
+++ b/src/main/resources/templates/solution/widget/pc-menu.html
@@ -13,7 +13,7 @@
             <!-- /toggle mobile menu -->
             <!-- logo -->
             <div class="tt-logo">
-               <a href="index.html">
+               <a href="/solution">
                  <img th:src="@{/images/logo.png}" src="/images/logo.png" alt="">
                </a>
             </div>
@@ -29,25 +29,92 @@
                   </ul>
                </nav>
             </div>
+            <div class="tt-search">
+                    <!-- toggle -->
+                    <button class="tt-search-toggle" data-toggle="modal" data-target="#modalAdvancedSearch">
+                       <svg class="tt-icon">
+                          <use xlink:href="#icon-search"></use>
+                        </svg>
+                    </button>
+                    <!-- /toggle -->
+                    <form class="search-wrapper">
+                        <div class="search-form">
+                            <input type="text" class="tt-search__input" placeholder="Search">
+                            <button class="tt-search__btn" type="submit">
+                               <svg class="tt-icon">
+                                  <use xlink:href="#icon-search"></use>
+                                </svg>
+                            </button>
+                             <button class="tt-search__close">
+                               <svg class="tt-icon">
+                                  <use xlink:href="#cancel"></use>
+                                </svg>
+                            </button>
+                        </div>
+                        <div class="search-results">
+                            <div class="tt-search-scroll">
+                                <ul>
+                                    <li>
+                                        <a href="page-single-topic.html">
+                                            <h6 class="tt-title">Rdr2 secret easter eggs</h6>
+                                            <div class="tt-description">
+                                               Here’s what I’ve found in Red Dead Redem..
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                       <a href="page-single-topic.html">
+                                            <h6 class="tt-title">Top 10 easter eggs in Red Dead Rede..</h6>
+                                            <div class="tt-description">
+                                                You can find these easter eggs in Red Dea..
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                       <a href="page-single-topic.html">
+                                            <h6 class="tt-title">Red Dead Redemtion: Arthur Morgan..</h6>
+                                            <div class="tt-description">
+                                                Here’s what I’ve found in Red Dead Redem..
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="page-single-topic.html">
+                                            <h6 class="tt-title">Rdr2 secret easter eggs</h6>
+                                            <div class="tt-description">
+                                               Here’s what I’ve found in Red Dead Redem..
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                       <a href="page-single-topic.html">
+                                            <h6 class="tt-title">Top 10 easter eggs in Red Dead Rede..</h6>
+                                            <div class="tt-description">
+                                                You can find these easter eggs in Red Dea..
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                       <a href="page-single-topic.html">
+                                            <h6 class="tt-title">Red Dead Redemtion: Arthur Morgan..</h6>
+                                            <div class="tt-description">
+                                                Here’s what I’ve found in Red Dead Redem..
+                                            </div>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <button type="button" class="tt-view-all" data-toggle="modal" data-target="#modalAdvancedSearch">Advanced Search</button>
+                        </div>
+                    </form>
+                </div>
          </div>
-         <div class="col-auto ml-auto">
-            <div class="tt-user-info d-flex justify-content-center">
-               <a  class="tt-btn-icon">
-                  <i class="tt-icon">
-                     <svg>
-                        <use xlink:href="#icon-notification"></use>
-                     </svg>
-                  </i>
-               </a>
-               <div class="tt-avatar-icon tt-size-md">
-                  <i class="tt-icon">
-                     <svg>
-                        <use xlink:href="#icon-ava-a"></use>
-                     </svg>
-                  </i>
-               </div>
-            </div>
-         </div>
+        <div class="col-auto ml-auto">
+          <div class="tt-account-btn">
+              <a href="page-login.html" class="btn btn-primary">Log in</a>
+              <a href="page-signup.html" class="btn btn-secondary">Sign up</a>
+          </div>
+        </div>
       </div>
    </div>
 </header>
