--- a/src/main/resources/templates/user/login/index.html
+++ b/src/main/resources/templates/user/login/index.html
@@ -15,13 +15,13 @@
                               Univa에 오신것을 환영합니다.
                           </div>
                           <div class="tt-description">
-                            풀리지 않는 문제를 각 다양한 분야의 전문가에게 도움을 받아보세요.
+                            Univa의 도움으로 어려운 문제를 해결해보세요!
                           </div>
                       </a>
                       <form class="form-default">
                           <div class="form-group">
                               <label for="loginUserName">ID</label>
-                              <input type="text" name="name" class="form-control" id="id" placeholder="azyrusmax">
+                              <input type="text" name="name" class="form-control" id="id" placeholder="ID 입력">
                           </div>
                           <div class="form-group">
                               <label for="loginUserPassword">Password</label>
@@ -41,7 +41,7 @@
                                   </div>
                               </div>
                               <div class="col ml-auto text-right">
-                                  <a href="#" class="tt-underline">비밀번호 찾기</a>
+                                  <a href="#" class="tt-underline">회원가입</a>
                               </div>
                           </div>
                           <div class="form-group">
@@ -64,7 +64,7 @@
                                   </div>
                               </div>
                           </div>
-                          <p>아직 회원이 아니신가요?<a href="#" class="tt-underline">회원가입하기</a></p>
+                          <p>비밀번호를 잊으셨나요?<a href="#" class="tt-underline" style="float:right;">비밀번호 찾기</a></p>
                           <div class="tt-notes">
                               copyright(c) 2020 All rights reserved by Univa.
                           </div>
