--- a/src/main/resources/templates/solution/widget/pc-menu.html
+++ b/src/main/resources/templates/solution/widget/pc-menu.html
@@ -111,7 +111,7 @@
          </div>
         <div class="col-auto ml-auto">
           <div class="tt-account-btn">
-              <a href="page-login.html" class="btn btn-primary">Log in</a>
+              <a href="/solution/user/login" class="btn btn-primary">Log in</a>
               <a href="page-signup.html" class="btn btn-secondary">Sign up</a>
           </div>
         </div>
