클라이언트 파일구조 변경 및 ajax 파일화

--- a/src/main/resources/templates/solution/apply.html
+++ b/src/main/resources/templates/solution/apply.html
@@ -366,6 +366,7 @@
       imagePreView(document.getElementById("imageFile_"+numberPad(length,2)));
   }
 </script>
+<script th:src="@{/js/bundle.js}"></script>
 <svg th:replace="solution/svg/svg :: svg"></svg>
 </body>
 </html>
